--- a/client/src/components/TopBar/TopBar.css
+++ b/client/src/components/TopBar/TopBar.css
@@ -12,7 +12,7 @@
   padding-left: 20px;
 }
 
-.topBar div a {
+.topBar div a, .topBar div span {
   padding: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -24,6 +24,10 @@
   display: flex;
 }
 
-.topBar div a:focus {
+.topBar div span:hover {
+  cursor: pointer;
+}
+
+.topBar div a:focus, .topBar div span:focus {
   color: #FFFFFF;
 }
